--- a/styles/style.css
+++ b/styles/style.css
@@ -4,17 +4,53 @@
 /* base style/common style/ */
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: "Poppins", sans-serif;
   background-color: #f3f1ff;
 }
 main {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.header-section {
+  width: 100%;
+  background-color: #562eff;
+}
+.header-item {
+  width: 870px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-item img {
+  width: 45px;
+  height: 45px;
+  padding: 20px;
+  /* margin-top: 20px;
+  margin-left: 50px; */
+}
+.my-nav nav {
+  display: flex;
+  align-items: center;
+}
+nav a {
+  color: white;
+  text-decoration: none;
+  margin-right: 36px;
+}
+.pro-pic {
+  width: 51px;
+  height: 51px;
 }
 .container {
   background-color: #ffffff;
   width: 870px;
   padding: 30px;
+  border-radius: 5px;
+  margin-top: 21px;
 }
 
 /* Top players style */
@@ -79,4 +115,112 @@ hr {
 .blog-author a {
   text-decoration: none;
   color: #562eff;
+}
+
+/* --------------------
+    Courses Style
+----------------------- */
+.courses {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 24px;
+}
+.course {
+  width: 255px;
+  height: 270px;
+}
+.course:hover {
+  cursor: pointer;
+  box-shadow: 2px 4px 15px gray;
+  border-radius: 5px;
+}
+.course .course-banner img {
+  width: 224px;
+  height: 104px;
+}
+
+.course-author {
+  color: #ed6b4f;
+}
+
+.course-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.fa-star {
+  font-size: 12px;
+}
+.fa-star.filled {
+  color: #ffc014;
+}
+.fa-star.empty {
+  color: #9f9f9f;
+}
+
+.course-duration {
+  background-color: #ffe4e8;
+  border-radius: 14.6913px;
+  color: #ff4a60;
+}
+
+/* Media Quries */
+/* Mobile Device */
+@media only screen and (max-width: 688px) {
+  .header-item {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .my-nav nav {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+
+  .container {
+    width: 100%;
+  }
+
+  .players,
+  .blogs,
+  .courses {
+    grid-template-columns: 1fr;
+  }
+  .player,
+  .blog,
+  .course {
+    flex-direction: column;
+  }
+}
+/* tablet device */
+
+@media only screen and (min-width: 688px) and (max-width: 992px) {
+  .header-item {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .my-nav nav {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .container {
+    width: 100%;
+  }
+  .players,
+  .courses {
+    /* background-color: red; */
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .blogs {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
